monticore-generator/src/test/resources/cocos/invalid/A0112/A0112c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0112;

grammar A0112c {

  Foo = "foo";

  enum Bar = "bar";

  enum Bar = "foo";

}
